# ai-daily

./: .gitignore  README.md  pyproject.toml
.codex/: daily-news-push.md
configs/: daily-brief.yaml
docs/: index.html  reports.json
docs/assets/: style.css
docs/criteria/: daily-brief-acceptance-criteria.md
docs/design/: architecture.md  report-ux-evaluation.md  source-strategy.md
docs/latest/: index.html
docs/plans/: 2026-05-18-daily-brief-implementation.md
docs/reports/2026-05-25/: index.html  meta.json  report.md
docs/reports/2026-05-26/: index.html  meta.json  report.md
docs/reports/2026-05-28/: index.html  meta.json  report.md
docs/reports/2026-05-29/: index.html  meta.json  report.md
docs/reports/2026-05-30/: index.html  meta.json  report.md
docs/reports/2026-05-31/: index.html  meta.json  report.md
docs/reports/2026-06-01/: index.html  meta.json  report.md
docs/reports/2026-06-02/: index.html  meta.json  report.md
docs/reports/2026-06-03/: index.html  meta.json  report.md
docs/reports/2026-06-05/: index.html  meta.json  report.md
docs/reports/2026-06-06/: index.html  meta.json  report.md
docs/reports/2026-06-07/: index.html  (+2 more)
scripts/: com.daily-brief.plist  publish_pages_report.py  run_daily_brief.sh
src/daily_brief/: __init__.py  cli.py  config.py  editorial.py  evaluator.py  memory.py  models.py  push.py  renderer.py  sample_data.py
tests/: test_cli.py  test_config.py  test_editorial.py  test_evaluator.py  test_memory.py  test_renderer.py  test_report_fallbacks.py  test_user_feedback_layout.py  test_youtube_transcripts.py
(+34 files in other folders)
