[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-brief"
version = "0.1.0"
description = "Local-first daily news briefing generator with HTML reports and Codex App push adapter."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "daily-brief maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
daily-brief = "daily_brief.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
